# kafka

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.alpine  README.md  composer.json  docker-compose.kafka.yml
ext/: build.rs
ext/src/: client.rs  cluster_replay.rs  ipc.rs  kafka_exception.rs  lib.rs  lifecycle.rs  pool.rs  protocol.rs  spawn.rs  subscription.rs  worker_entry.rs  worker_health.rs
php-driver/: composer.json
php-driver/src/Hi/Kafka/: SwooleClient.php  SwowClient.php
proto/: Cargo.toml
proto/src/: codec.rs  consumer.rs  frame.rs  lib.rs  oauth.rs  pause_resume.rs  payload.rs  rebalance.rs  seek.rs  send_offsets.rs  txn.rs
scripts/: autospawn-test.sh  build-dev.sh  build-so.sh  cleanup-ghosts.sh  docker-image-verify.sh  kafka-smoke-test.sh  run-all-e2e.sh  smoke-test.sh
stubs/: hi_kafka.php
tests/php/: _rebalance_joiner.php  _swow_load_check.php  auto-backpressure.php  binary.php  configs.php  consumer-in-txn.php  consumer-recovery.php  control-recovery.php  exception-fields.php  headers.php  integration.php  oauth-smoke.php  panic-recovery.php  partition-timestamp.php  pause-resume.php  rebalance.php  recovery.php  replay-recovery.php  seek.php  swoole-client.php  swoole-phase3.php  transaction.php
worker/: Cargo.toml
worker/src/: cluster.rs  consumer.rs  error.rs  lib.rs  main.rs  metrics.rs  producer.rs  server.rs  shutdown.rs
worker/src/consumer/: real.rs
worker/src/producer/: real.rs
worker/tests/: dispatch_panic_e2e.rs  lifecycle_exit_e2e.rs  produce_fnf_e2e.rs
